# BrainFlow

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  SECURITY.md  SECURITY_REVIEW.md  mcp_server.py  pyproject.toml  server.py
.github/workflows/: ci.yml
brain/: brain.py  claude_bridge.py  config.py  knowledge_store.py  neurons.py  persistence.py  regions.py  screen_observer.py  synapses.py
dashboard/: index.html
dashboard/js/: websocket.js
sensory/: screen_ui.py  text.py
tests/: __init__.py  test_brain.py  test_config.py  test_p1_features.py  test_persistence.py  test_rate_limiter.py
